--- a/2022面试题.md
+++ b/2022面试题.md
@@ -241,11 +241,95 @@ hook 复用**逻辑**. HOC复用**逻辑和视图**
 
 ## 经历
 
-react使用优势?
+### react使用优势?
 
+1. 虚拟Dom
 
+2. 组件化 将页面拆分成若干个组件，并且react一个组件同时耦合了css，js ,image，这种模式整个垫付了过去的传统模式
 
-性能优化?
+3. JSX语法
+
+4. 单向数据流
+
+### react 怎么diff?
+
+react的diff 策略
+
+- **同级diff, 忽略跨层级的移动操作**
+- **不同类型的组件生成不同的树**
+- **同层级子节点可以使用key作为区分**
+
+其中Diff分为两类：
+
+1. 当`newChild`类型为`object`、`number`、`string`，代表同级只有一个节点
+2. 当`newChild`类型为`Array`，同级有多个节点
+
+同级的节点的diff分为:
+**单节点diff**: 
+先看上次的更新child是否存在. 
+
+	- 不存在 新建fiber节点
+	- 存在看是否能够复用
+		- 先看key是否相同
+			- key不相同 将该fiber标记为删除, 后面可能还有兄弟fiber.
+			- key相同 接下来看type是否相同
+				- type相同则复用
+				- type不相同 将该fiber及其兄弟fiber全部标记为删除
+				
+
+**多节点diff**: 
+>虽然本次更新的JSX对象 newChildren为数组形式，但是和newChildren中每个组件进行比较的是current fiber，同级的Fiber节点是由sibling指针链接形成的单链表，即不支持双指针遍历。
+>
+>在日常开发中，相较于`新增`和`删除`，`更新`组件发生的频率更高。 所以`Diff`会优先判断当前节点是否属于`更新`。
+
+Diff 分两轮遍历:
+
+第一轮遍历:处理更新的节点
+第二轮遍历: 处理剩下的不属于更新的节点
+
+第一轮遍历:
+
+1. `let newidx = 0`, 遍历`newChildren`; 将`newChildren[i]`与`oldFilber`进行比较. 如果可以复用, 继续遍历
+2. `newidx++`; 继续将`newChildren[i]` 与 `oldFilber.sibling` 进行比较 . 如果可以复用, 继续遍历
+3. 如果不可以复用, 分两种:
+   1. `key `不同 **直接第一轮遍历结束**
+   2. `key `相同` type`不同.  将oldFilber标记删除, 继续遍历
+4. 如果` newChildren` 遍历完 ( `newIdx === newChildren.length - 1 `) 或者` oldFiber `遍历完 `oldFiber === bull `, 跳出遍历，**第一轮遍历结束。**
+
+第一轮遍历的结果会有几种情况:
+
+1. `newChildren` 与 `oldFiber` 都遍历完了 --- 说明这次只是更新节点,` Diff` 结束
+2. `newChilderen`遍历完了, `oldFilber`没有遍历完 --- 说明这次删除节点, 只需将剩下`oldFilber`标记` deletion`
+3. `newChilderen`没有遍历完, `oldFilber`遍历完了 --- 说明这次新增节点, 只需将剩下` newChilderen` 遍历生成`filber` 标记为新增
+4. `newChilderen`和 `oldFilber`都没有遍历完, --- 说明这次更新中改变了位置
+
+第二轮遍历: 
+
+>  没遍历完的节点
+
+由于有节点改变了位置，所以不能再用位置索引`i`对比前后的节点，那么如何才能将同一个节点在两次更新中对应上呢？
+
+我们需要使用`key`。
+
+为了快速的找到`key`对应的`oldFiber`，我们将所有还未处理的`oldFiber`存入以`key`为key，`oldFiber`为value的`Map`中。
+
+```javascript
+const existingChildren = mapRemainingChildren(returnFiber, oldFiber);
+```
+
+接下来遍历剩余的`newChildren`，通过`newChildren[i].key`就能在`existingChildren`中找到`key`相同的`oldFiber`。
+
+- 找到相同key	
+  - type是否相同 可复用 
+    - 可复用 existingChildren.delete(newFiber.key)
+  - 不可复用 新建fiber
+- 没找到新建fiber
+
+剩余existingChildren如果还有 遍历筛入deletions
+
+改变了位置的情况
+
+react性能优化?
 
 webpack 压缩js的插件?
 
