--- a/2022面试题.md
+++ b/2022面试题.md
@@ -244,12 +244,11 @@ hook 复用**逻辑**. HOC复用**逻辑和视图**
 ### react使用优势?
 
 1. 虚拟Dom
-
 2. 组件化 将页面拆分成若干个组件，并且react一个组件同时耦合了css，js ,image，这种模式整个垫付了过去的传统模式
-
 3. JSX语法
-
 4. 单向数据流
+
+是个库. 项目使用需要引入react-router, 数据管理react-redux配合
 
 ### react 怎么diff?
 
@@ -275,7 +274,7 @@ react的diff 策略
 			- key相同 接下来看type是否相同
 				- type相同则复用
 				- type不相同 将该fiber及其兄弟fiber全部标记为删除
-				
+
 
 **多节点diff**: 
 >虽然本次更新的JSX对象 newChildren为数组形式，但是和newChildren中每个组件进行比较的是current fiber，同级的Fiber节点是由sibling指针链接形成的单链表，即不支持双指针遍历。
@@ -329,10 +328,46 @@ const existingChildren = mapRemainingChildren(returnFiber, oldFiber);
 
 改变了位置的情况
 
-react性能优化?
+### react性能优化? 项目上的性能优化?
 
-webpack 压缩js的插件?
+React: 
 
-hook与类组件的区别?
+- 组件: React.useMemo; PureComponent, shouldComponentUpdate
+- 函数: useCallback. useMemo;
+- 避免内联函数.
+- React.lazy与 React.Suspense
+- 减少渲染
 
-使用typescript的好处?
+项目上的性能优化: 
+
+- **CDN加速**: **output.publicPath** 静态资源配置cdn
+- **压缩css** plugin: `optimize-css-assets-webpack-plugin` `cssnano`
+- **压缩html**: `HtmlWebpackPlugin.minify ` 
+- **tree shaking 清除无用的css, js**: 
+  - css: glob-all@3.2.1 `purify-css@1.2.5` `purifycss-webpack@0.7.0` 
+  - js: `optimization.usedExports`: true 且只有mode: 'production'才生效. 消除副作用: package.json中的 sideEffects: ['*.less', '*.css', '@babel/polyfill'] // 免除消除
+- **代码分割 optimization.splitChunks **: 分离公共文件. 
+
+### webpack 压缩js的插件?
+
+多线程压缩js:  webpack-parallel-uglify-plugin
+
+### hook与class组件的区别?
+
+- hook写法更简洁. 比class更` 声明式`
+
+- hook使得函数组件更容易复用. 比class更` 函数式`
+
+- 复杂组件中 class起初简单. 后面逐渐被状态逻辑和副作用充斥. 每个生命周期包含不相关的逻辑. 难以拆分. 而hook,可以将组件相互关联的部分拆分成更小的函数, 例如请求数据, 设置订阅等. 而非按生命周期来划分.
+
+- hook可以使你在无需改变组件结构的情况下复用状态逻辑. Class组件复用状态逻辑需要使用高级组件嵌套,或者provider. render props
+
+  
+
+### 使用typescript的好处?
+
+- 增加了代码的可读性和可维护性
+  - 类型系统实际上是最好的文档
+  - 可以在编译阶段就发现大部分错误
+  - 增强了编辑器和 IDE 的功能，包括代码补全、接口提示、跳转到定义、重构等
+- 静态类型检查
