--- a/2022面试题.md
+++ b/2022面试题.md
@@ -330,15 +330,16 @@ const existingChildren = mapRemainingChildren(returnFiber, oldFiber);
 
 ### react性能优化? 项目上的性能优化?
 
-React: 
+React(代码层面): 
 
 - 组件: React.useMemo; PureComponent, shouldComponentUpdate
 - 函数: useCallback. useMemo;
 - 避免内联函数.
 - React.lazy与 React.Suspense
-- 减少渲染
+- 减少渲染(重排和重绘)
+- 防抖和节流（resize，scroll，input）。
 
-项目上的性能优化: 
+构建上的性能优化: 
 
 - **CDN加速**: **output.publicPath** 静态资源配置cdn
 - **压缩css** plugin: `optimize-css-assets-webpack-plugin` `cssnano`
@@ -347,10 +348,21 @@ React:
   - css: glob-all@3.2.1 `purify-css@1.2.5` `purifycss-webpack@0.7.0` 
   - js: `optimization.usedExports`: true 且只有mode: 'production'才生效. 消除副作用: package.json中的 sideEffects: ['*.less', '*.css', '@babel/polyfill'] // 免除消除
 - **代码分割 optimization.splitChunks **: 分离公共文件. 
+- **开启 gzip 压缩** webpack 中使用 `compression-webpack-plugin` ，node 作为服务器也要开启，使用 `compression`。
+
+其它：
+
+- 使用 http2。因为解析速度快，头部压缩，多路复用，服务器推送静态资源。
+- 使用服务端渲染。
+- 图片压缩。
+- 使用 http 缓存，比如服务端的响应中添加 `Cache-Control / Expires` 。
 
 ### webpack 压缩js的插件?
 
-多线程压缩js:  webpack-parallel-uglify-plugin
+多线程压缩js:  webpack-parallel-uglify-plugin, 
+
+- `uglifyjs-webpack-plugin`：不支持 ES6 压缩 (Webpack4 以前)
+- `terser-webpack-plugin`: 支持压缩 ES6 (Webpack4)
 
 ### hook与class组件的区别?
 
