--- a/算法.md
+++ b/算法.md
@@ -178,6 +178,11 @@ function ShellSort(arr) {
 
 使⽤了⼆分的思想。可以算最重要的排序算法了 ⼤概就是找⼀个标志位，先遍历⼀次，所有个头⽐他矮的，都站左边，⽐他个头⾼的，都站右边，遍历 ⼀次，就把数组分成两部分，然后两遍的数组，递归执⾏相同的逻辑
 
+1. 定一个pivot. 
+2. 两端的指针 left. right. 先从 right 开始. 比 pivot 小的放左边.  比 pivot 大的放右边
+3. 直到 left === right. 这个点赋值 pivot
+4. 根据当前 left 分开两组重复1-3. 直到 length===1 结束 
+
 便于理解, 额外占⽤空间.
 
 ```js
@@ -221,17 +226,19 @@ function quickSort1(arr, low = 0, high = arr.length - 1) {
           // 如果右边小right--
             right --
         }
-        // 找到比flag小的赋值过来
+        // 找到比flag小的赋值过来 放到左边
         arr[left] = arr[right]
         // [0,11,4,3,6,1,9,7,2,0]  -> [0,2,4,3,6,1,9,7,2,11] -> [0,2,4,3,6,1,9,7,4,11] -> [0,2,4,3,6,1,9,7,3,11] -> 
         // [0,2,4,3,6,1,7,8,9,11]
         if(left < right && flag >= arr[left]) {
             left ++ // left -> 1
         } 
+        // 找到比flag大的 放到右边
         arr[right] = arr[left] 
         // [0,11,4,3,6,1,9,7,2,11] -> [0,2,4,3,6,1,9,7,4,11] -> [0,2,4,3,6,1,9,7,3,11] -> [0,2,4,3,6,1,9,7,6,11]
         // 
     }
+    // 当left = right 时. 该位置为pivot点 (flag)
     arr[left] = flag 
     quickSort1(arr, low, left - 1)
     quickSort1(arr, left + 1, high)
