--- a/2022面试题.md
+++ b/2022面试题.md
@@ -383,3 +383,19 @@ React(代码层面):
   - 可以在编译阶段就发现大部分错误
   - 增强了编辑器和 IDE 的功能，包括代码补全、接口提示、跳转到定义、重构等
 - 静态类型检查
+
+
+
+### redux使用流程?
+
+### 浅拷贝的方法, 且解构符与浅拷贝的区别?
+
+### react中setState与Vue的赋值区别?
+
+### 小程序经验过期
+
+### v-if v-show 是否会导致重排重绘?
+
+### hash 和 history的使用场景?
+
+### SEO meta的知识复习
