--- a/2022面试题.md
+++ b/2022面试题.md
@@ -398,4 +398,42 @@ React(代码层面):
 
 ### hash 和 history的使用场景?
 
+Hash: 
+
+原理:
+
+- 早期的前端路由的实现就是基于`location.hash`来实现的，`location.hash`的值就是URL中#后面的内容 其实现原理就是监听#后面的内容来发起Ajax请求来进行局部更新，而不需要刷新整个页面。
+
+- 使用`hashchange`事件来监听 URL 的变化，以下这几种情况改变 URL 都会触发 hashchange 事件：浏览器前进后退改变 URL、a标签改变 URL、window.location改变URL。
+
+
+
+两种不同使用场景
+
+- 从上文可见，hash模式下url会带有#，当你希望url更优雅时，可以使用history模式。
+- 当使用history模式时，需要注意在服务端增加一个覆盖所有情况的候选资源：如果 URL 匹配不到任何静态资源，则应该返回同一个 index.html 页面，这个页面就是你 app 依赖的页面。
+- 当需要兼容低版本的浏览器时，建议使用hash模式。
+- 当需要添加任意类型数据到记录时，可以使用history模式。
+
+
+
 ### SEO meta的知识复习
+
+```html
+<meta name='description' content={`${description}`} />
+<meta name='keywords' content={`${keywords}`} />
+```
+
+
+
+### 前端安全漏洞
+
+### 浏览器渲染过程
+
+### 虚拟列表 滚动位置的实现
+
+### 跨域名通信的方法
+
+### 设计模式
+
+### 
