--- a/2022面试题.md
+++ b/2022面试题.md
@@ -390,7 +390,23 @@ React(代码层面):
 
 ### 浅拷贝的方法, 且解构符与浅拷贝的区别?
 
+```js
+// 对象
+
+// 数组
+// slice()
+var arr = arr.slice()
+var arr = [].concat(arr)
+```
+
+
+
 ### react中setState与Vue的赋值区别?
+
+两者对数据的处理不一样
+
+- vue是数据的劫持和通知订阅的方式，所以可以立即响应数据的变化。 值的改变却是同步的, dom的更新是异步的
+- react数据更新setState是异步的
 
 ### 小程序经验过期
 
@@ -398,7 +414,7 @@ React(代码层面):
 
 ### hash 和 history的使用场景?
 
-Hash: 
+**Hash:**
 
 原理:
 
@@ -406,14 +422,26 @@ Hash:
 
 - 使用`hashchange`事件来监听 URL 的变化，以下这几种情况改变 URL 都会触发 hashchange 事件：浏览器前进后退改变 URL、a标签改变 URL、window.location改变URL。
 
+优点: 
+
+- hash值的改变，都会在浏览器的访问历史中增加一个记录，所以可以通过浏览器的回退、前进按钮控制hash的切换 会覆盖锚点定位元素的功能
+
+**History模式**
+
+- history 提供了 pushState 和 replaceState 两个方法来记录路由状态，这两个方法改变 URL 不会引起页面刷新
+
+- history 提供类似 hashchange 事件的 popstate 事件，但 popstate 事件有些不同：通过浏览器前进后退改变 URL 时会触发 popstate 事件，通过pushState/replaceState或a标签改变 URL 不会触发 popstate 事件。好在我们可以拦截 pushState/replaceState的调用和a标签的点击事件来检测 URL 变化，所以监听 URL 变化可以实现，只是没有 hashchange 那么方便。
+
+- pushState(state, title, url) 和 replaceState(state, title, url)都可以接受三个相同的参数。
+
 
 
 两种不同使用场景
 
 - 从上文可见，hash模式下url会带有#，当你希望url更优雅时，可以使用history模式。
 - 当使用history模式时，需要注意在服务端增加一个覆盖所有情况的候选资源：如果 URL 匹配不到任何静态资源，则应该返回同一个 index.html 页面，这个页面就是你 app 依赖的页面。
-- 当需要兼容低版本的浏览器时，建议使用hash模式。
-- 当需要添加任意类型数据到记录时，可以使用history模式。
+- **当需要兼容低版本的浏览器时，建议使用hash模式。**
+- **当需要添加任意类型数据到记录时，可以使用history模式。**
 
 
 
@@ -428,12 +456,64 @@ Hash:
 
 ### 前端安全漏洞
 
+XSS攻击: 一种`代码注入攻击`，通过恶意注入脚本在浏览器运行，然后盗取用户信息
+
+CSRF攻击: `跨站请求伪造攻击`，**主要就是利用用户的登录状态发起跨站请求*
+
 ### 浏览器渲染过程
+
+[浏览器架构](https://xie.infoq.cn/article/5d36d123bfd1c56688e125ad3)
+
+
+
+### [浏览器是单线程吗](https://imweb.io/topic/58e3bfa845e5c13468f567d5)
+
+浏览器内核是多线程
+
+- GUI 渲染线程
+- JavaScript引擎线程
+- 定时触发器线程
+- 事件触发线程
+- 异步http请求线程
+
+
 
 ### 虚拟列表 滚动位置的实现
 
 ### 跨域名通信的方法
 
+同源页面之间通信
+
+- broadcast channel
+- service worker
+- LocalStorage
+- indexedDB
+- shared worker
+
+非同源页面通信
+
+- iframe
+
 ### 设计模式
 
-### 
+### 闭包的好处, 优点
+
+- 闭包就是能够读取其他函数内部变量的函数
+- 由于在javascript中，只有函数内部的子函数才能读取局部变量，所以说，**闭包可以简单理解成“定义在一个函数内部的函数**。
+- `在本质上，闭包是将函数内部和函数外部连接起来的桥梁`。
+
+最大用处有两个, `一个是前面提到的可以读取函数内部的变量，另一个就是让这些变量的值始终保持在内存中，不会在f1调用后被自动清除`。
+
+好处: 
+
+1. 希望一个变量长期保存内存中；
+
+2. 避免全局变量污染；
+
+3. 私有成员的存在。
+
+缺点：
+
+1. 常驻内存，增加内存使用量；
+
+2. 使用不当造成内存泄漏。
