--- a/要点解析.md
+++ b/要点解析.md
@@ -1187,6 +1187,15 @@ foo();
 // foo ===> MemberExpression 是 foo，解析标识符 返回Reference ===> base值: EnvironmentRecord ===>  ImplicitThisValue(ref) , ImplicitThisValue(ref) 返回undefined ===> this: undefined
 ```
 
+#### **this指向的四种情况**
+
+1. 作为对象的方法调用
+2. 作为普通函数调用
+3. 构造器调用
+4. Function.prototype.call 或 Function.prototype.apply调用
+
+
+
 #### 总结
 
 从ECMAScript规范解读this:
