feat: docker day7

--- a/2022面试题.md
+++ b/2022面试题.md
@@ -735,5 +735,23 @@ babel-loader
 
 1. 项目中抽屉点击任何地方收回
 2. [虚拟列表](#虚拟列表 滚动位置的实现)
-3. 物理机升级node版本,启动报错. 本地和线上不一致. 从而推动项目docker部署
+3. 物理机升级node版本,启动报错. 本地和线上不一致. 从而推动项目docker部署, 从而保证本地和线上环境一致
+
+### 数组扁平化
+
+```js
+function flat(arr) {
+    var res = [];
+    arr.forEach((item, i) => {
+      if (Array.isArray(item)) {
+        res = res.concat(flat(item));
+      } else {
+        res.push(item);
+      }
+    });
+    return res;
+  }
+```
+
+### 浏览器缓存
 
