--- a/要点解析.md
+++ b/要点解析.md
@@ -3025,7 +3025,7 @@ let arr3 = arr1.slice()
 
 记着会改变原数组的几个方法
 
-pop`、`push`、`shift`、`unshift`、`reverse`、`sort`、`splice`、`fill`、`copyWithin
+pop`、`push`(返回数组长度)、`shift`、`unshift`、`reverse`、`sort`、`splice`、`fill`、`copyWithin
 
 ### 高频手写代码
 
