--- a/2022面试题.md
+++ b/2022面试题.md
@@ -751,7 +751,97 @@ function flat(arr) {
     });
     return res;
   }
+// 进阶控制扁平化层数
+function flat(arr, level = 1) {
+    var res = [];
+    arr.forEach((item, i) => {
+      if (Array.isArray(item)) {
+        if(level > 0) {
+          res = res.concat(flat(item, level - 1));
+        }else {
+          res.push(item)
+        }
+      } else {
+        res.push(item);
+      }
+    });
+    return res;
+  }
 ```
 
 ### 浏览器缓存
+
+缓存过程: 浏览器发去HTTP请求 -> 浏览器缓存是否有缓存标识和缓存结果且是否有效 -> 有缓存标识发送给服务器返回请求结果(有标识无效/没标识-> 200+新结果)(有标识且有效 -> 304 继续使用缓存) -> 浏览器存储请求结果到缓存中.
+
+Expires(HTTP/1.0)值为服务器该缓存结果到期时间. 优先级低于Cache-Control(HTTP/1.1) . 原因是Expires可能存在时区误差.
+
+If-Modified-Since值为Last-Modified(该资源最后修改时间), 客户端再次发送请求时携带该值与服务器该资源最后修改时间做对比. 优先级低于If-None-Match值为Etag.
+
+If-None-Match值为Etag(服务器生成该资源的唯一标识), 客户端再次发送请求时携带该值与服务器Etag做对比.
+
+强制缓存优先于协商缓存进行. 若强制缓存(Expires和**Cache-Control**)生效则直接使用缓存，若不生效则进行协商缓存(Last-Modified / If-Modified-Since和**Etag / If-None-Match**)，**协商缓存由服务器决定是否使用缓存**，若协商缓存失效，那么代表该请求的缓存失效，重新获取请求结果，再存入浏览器缓存中；生效则返回304，继续使用缓存.
+
+### Hook中定时器的使用
+
+https://zh-hans.reactjs.org/docs/hooks-faq.html#what-can-i-do-if-my-effect-dependencies-change-too-often
+
+```jsx
+function Counter() {
+  const [count, setCount] = useState(0);
+
+  useEffect(() => {
+    const id = setInterval(() => {
+      setCount(c => c + 1); // ✅ 在这不依赖于外部的 `count` 变量
+    }, 1000);
+    return () => clearInterval(id);
+  }, []); // ✅ 我们的 effect 不使用组件作用域中的任何变量
+
+  return <h1>{count}</h1>;
+}
+```
+
+有依赖的情况
+
+```jsx
+function Example(props) {
+  // 把最新的 props 保存在一个 ref 中
+  const latestProps = useRef(props);
+  useEffect(() => {
+    latestProps.current = props;
+  });
+
+  useEffect(() => {
+    function tick() {
+      // 在任何时候读取最新的 props
+      console.log(latestProps.current);
+    }
+
+    const id = setInterval(tick, 1000);
+    return () => clearInterval(id);
+  }, []); // 这个 effect 从不会重新执行
+}
+```
+
+```jsx
+import { useEffect, useRef } from 'react';
+
+const useInterval = (callback: Function, delay?: number | null) => {
+  const savedCallback = useRef<Function>(() => {});
+
+  useEffect(() => {
+    savedCallback.current = callback;
+  });
+
+  useEffect(() => {
+    if (delay !== null) {
+      const interval = setInterval(() => savedCallback.current(), delay || 0);
+      return () => clearInterval(interval);
+    }
+
+    return undefined;
+  }, [delay]);
+};
+
+export default useInterval;
+```
 
