--- a/2022面试题.md
+++ b/2022面试题.md
@@ -257,7 +257,7 @@ hook 复用**逻辑**. HOC复用**逻辑和视图**
 1. 虚拟Dom
 2. 组件化 将页面拆分成若干个组件，并且react一个组件同时耦合了css，js ,image，这种模式整个垫付了过去的传统模式
 3. JSX语法
-4. 单向数据流
+4. Props单向数据流
 
 是个库. 项目使用需要引入react-router, 数据管理react-redux配合
 
@@ -406,6 +406,7 @@ React(代码层面):
   - 类型系统实际上是最好的文档
   - 可以在编译阶段就发现大部分错误
   - 增强了编辑器和 IDE 的功能，包括代码补全、接口提示、跳转到定义、重构等
+  - 更好的协作
 - 静态类型检查
 
 
@@ -736,7 +737,7 @@ babel-loader
 1. 项目中抽屉点击任何地方收回
 2. [虚拟列表](#虚拟列表 滚动位置的实现)
 3. 物理机升级node版本,启动报错. 本地和线上不一致. 从而推动项目docker部署, 从而保证本地和线上环境一致
-3. 
+3. 项目是服务端渲染. 起了一个Socket.io
 
 ### 数组扁平化
 
@@ -844,5 +845,63 @@ const useInterval = (callback: Function, delay?: number | null) => {
 };
 
 export default useInterval;
+```
+
+### URL访问过程
+
+域名DNS解析(获取服务器IP地址) ==> 与服务器建立TCP连接(三次握手) ==> 服务器响应请求 ==> 客户端接收数据开始解析渲染
+
+> 客户端下载、解析、渲染显示页面
+
+- a. 如果是Gzip包，则先解压为HTML
+- b. 解析HTML的头部代码，下载头部代码中的样式资源文件或脚本资源文件
+- c. 解析HTML代码和样式文件代码，构建HTML的DOM树以及与CSS相关的CSSOM树
+- d. 通过遍历DOM树和CSSOM树，浏览器依次计算每个节点的大小、坐标、颜色等样式，构造渲染树
+- e. 根据渲染树完成绘制过程
+
+### websocket原理
+
+Websocket是一个**持久化**的协议
+
+websocket约定了一个通信的规范，通过一个握手的机制，客户端和服务器之间能建立一个类似tcp的连接，从而方便它们之间的通信。在websocket出现之前，web交互一般是基于http协议的短连接或者长连接。websocket是一种全新的协议，不属于http无状态协议，协议名为"ws"，这意味着一个websocket连接地址会是这样的写法：ws://**。websocket协议本质上是一个基于tcp的协议。
+
+https://www.infoq.cn/article/ujwip4vyf3xjkphimtjc
+
+当客户端要和服务端建立 WebSocket 连接时，在客户端和服务器的握手过程中，客户端首先会向服务端发送一个 HTTP 请求，包含一个 Upgrade 请求头来告知服务端客户端想要建立一个 WebSocket 连接。
+
+### BFC
+
+**BFC的原理（渲染规则）**
+
+1. BFC元素垂直方向的边距会发生重叠。**属于不同BFC外边距不会发生重叠**
+2. BFC的区域**不会与浮动元素的布局重叠**。
+3. BFC元素是一**个独立的容器，外面的元素不会影响里面的元素。里面的元素也不会影响外面的元素**。
+4. **计算BFC高度的时候，浮动元素也会参与计算**(清除浮动)
+
+**如何创建BFC**
+
+1. **overflow不为visible**;
+2. float的值不为none；
+3. position的值不为static或relative；
+4. **display属性为inline-blocks,table,table-cell,table-caption,flex,inline-flex**;
+
+使用情况
+
+1. BFC内的外边距不与外部的外边距发生重叠。(非垂直)
+2. BFC元素不会与浮动元素发生重叠(在没BFC时, 浮动元素重叠, 但是文本信息会被浮动元素所覆盖)。**BFC的话. 兄弟元素浮动不重叠**
+3. 子元素都浮动. **BFC的话. 计算父元素高度的时候，浮动元素也会参与计算. (清除浮动)**
+
+### 数组去重
+
+```js
+
+// 1. [...new Set(arr)]
+// 2. 遍历 map
+// 3. 使用栈结构
+// 4. 排序后, 双指针遍历 使用两个指针，右指针始终往右移动，
+    //  如果右指针指向的值等于左指针指向的值，左指针不动。
+    //  如果右指针指向的值不等于左指针指向的值，那么左指针往右移一步，然后再把右指针指向的值赋给左指针。
+
+
 ```
 
