--- a/要点解析.md
+++ b/要点解析.md
@@ -1187,12 +1187,13 @@ foo();
 // foo ===> MemberExpression 是 foo，解析标识符 返回Reference ===> base值: EnvironmentRecord ===>  ImplicitThisValue(ref) , ImplicitThisValue(ref) 返回undefined ===> this: undefined
 ```
 
-#### **this指向的四种情况**
+#### **this指向的5种情况**
 
 1. 作为对象的方法调用
 2. 作为普通函数调用
 3. 构造器调用
 4. Function.prototype.call 或 Function.prototype.apply调用
+4. 箭头函数使用 
 
 
 
@@ -3025,7 +3026,7 @@ let arr3 = arr1.slice()
 
 记着会改变原数组的几个方法
 
-pop`、`push`(返回数组长度)、`shift`、`unshift`、`reverse`、`sort`、`splice`、`fill`、`copyWithin
+pop(返回删除的值)`、`push`(返回数组长度)、`shift`、`unshift`、`reverse`、`sort`、`splice`、`fill`、`copyWithin
 
 ### 高频手写代码
 
@@ -3040,9 +3041,9 @@ function getUrlParams(url) {
     url.replace(reg, (match, s1, s2) => {
       obj[s1] = s2;
     });
-    return obj
+    return obj;
   } catch (error) {
-    return false
+    return false;
   }
 }
 ```
