--- a/要点解析.md
+++ b/要点解析.md
@@ -3005,7 +3005,7 @@ let arr3 = arr1.slice()
 
     // 2. 手写
     function clone(target, map = new WeakMap()) {
-      if (typeof target === "object") {
+      if (typeof target === "object" && Object.prototype.toString.call(target) !== '[object RegExp]') {
         let obj = Array.isArray(target) ? [] : {};
         // 防止循环引用
         if (map.get(target)) {
@@ -3022,6 +3022,14 @@ let arr3 = arr1.slice()
         return target;
       }
     }
+
+// 克隆正则 Object.prototype.toString.call(a.c)
+function cloneRegExp(regexp) {
+  const result = new regexp.constructor(regexp.source, reFlags.exec(regexp))
+  result.lastIndex = regexp.lastIndex
+  return result
+}
+
 ```
 
 记着会改变原数组的几个方法
